fixing overflow

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,7 @@
 // Contenedor Principal
 
 .video_background {
-  min-height: 100%;
+  min-height: 100vh;
   min-width: 100%; 
   position: fixed;
   left: 0; 
